--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.563.1",
 		"mode-watcher": "^1.1.0"
 	}
 }
